--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <title>Header Design</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link href="{{ url_for('/home/ubuntu/lifeabeachvietnam/static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('/home/ubuntu/lifeabeachvietnam/static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
 <body>
     <div class="header">
